--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ magnum = { version = "1.0.0", features = ["with_rodio"] }
 tree-sitter = "0.20.9"
 tree-sitter-rust = "0.20.3"
 clap = { version = "4.0.27", features = ["derive"] }
-helix-lsp = { git = "https://github.com/StratusFearMe21/helix", version = "0.6.0" }
-helix-core = { git = "https://github.com/StratusFearMe21/helix", version = "0.6.0" }
+helix-lsp = { git = "https://github.com/StratusFearMe21/helix" }
+helix-core = { git = "https://github.com/StratusFearMe21/helix" }
+# helix-view = { git = "https://github.com/StratusFearMe21/helix" }
 tokio = { version = "1.22", features = ["rt"] }
 futures-util = "0.3.25"
 serde_json = "1.0.89"
